# field-match

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: field_match-0.2.0-py3-none-any.whl  field_match-0.3.0-py3-none-any.whl  field_match-0.4.0-py3-none-any.whl  index.html
docs_src/: api.md  contributing.md  examples.md  how-it-works.md  index.md  reading-files.md  report.md  requirements.txt  tuning.md  web-app.md  why.md
examples/: cdc-atsdr_svi.py  cdc_atsdr_svi.ipynb  cdc_atsdr_svi.py  cdc_places.py  imls_pls.py  namcs_formats.py
src/field_match/: __init__.py  compare.py  io.py  matching.py  similarity.py
tests/: conftest.py  test_compare.py  test_io.py  test_matching.py  test_similarity.py
