[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "field-match"
dynamic = ["version"]  # single source of truth: __version__ in src/field_match/__init__.py
description = "Build a column crosswalk between dataset versions by matching on column names and column contents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "cstirry" }]
keywords = ["schema-matching", "content-matching", "dataset-comparison", "column-mapping", "field-mapping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0",  # to_datetime(format="mixed") needs 2.0+
    "numpy>=1.23",
]

[project.optional-dependencies]
optimal = ["scipy>=1.9"]          # Hungarian algorithm for one-to-one assignment
excel = ["openpyxl>=3.1"]         # pd.read_excel support
parquet = ["pyarrow>=10.0"]       # pd.read_parquet support
spss = ["pyreadstat>=1.2"]        # pd.read_spss support
r = ["pyreadr>=0.5; python_version >= '3.10'"]  # .rds support - pyreadr has no Python 3.9 wheel from 0.5.4 on
io = ["field-match[excel,parquet,spss,r]"]  # everything read_table() can open
dev = ["pytest>=7", "ruff>=0.4", "scipy>=1.9", "openpyxl>=3.1", "pyarrow>=10.0", "pyreadstat>=1.2", "pyreadr>=0.5; python_version >= '3.10'"]

[project.urls]
Homepage = "https://github.com/cstirry/field-match"
Issues = "https://github.com/cstirry/field-match/issues"
Changelog = "https://github.com/cstirry/field-match/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/field_match/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/field_match"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
